<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="40dp">

            <EditText
                android:id="@+id/email_text"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="example@email.com"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/password_text"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:password="true"
                android:hint="password" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="Login" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="Register" />

            <Button
                android:id="@+id/skip_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="Skip" />

        </LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/progress_dim"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:alpha="0.15"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />
</RelativeLayout>