...

    <string name="quad_test_hint_front">Try and remember the answer to this test.\nTap anywhere on the screen to check your answer.</string>
    <string name="quad_test_hint_back">Swipe up if you got the answer.\nSwipe down if you did not.</string>
    <string name="match_test_hint">Swipe left/right to find the correct answer.\nPress the blue button when you\'re done.</string>
    <string name="tutorial_final_hint">You should now understand Kioku\'s 4 step process: <i>search</i>, <i>select</i>, <i>save</i>, <i>study</i>. Tap anywhere to finish the tutorial and start exploring!</string>
    <string name="login_auth_error">Failed to authenticate. Please try again.</string>
    <string name="registration_invalid_email_error">Please enter a valid email address</string>
    <string name="registration_password_too_short_error">Password must be at least %1$d characters</string>
    <string name="add_languages_none_selected_error">Please select at least one language</string>
    <string name="search_no_sources_error">You need at least one source to use search</string>
    <string name="action_settings">Settings</string>

</resources>

