<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:drawable/gallery_thumb"
    android:padding="0dp">

    <WebView
        android:id="@+id/fragment_web_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"/>

    <RelativeLayout
        android:id="@+id/search_select_button"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="8dp"
        android:paddingBottom="12dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:layout_marginBottom="10dp"
        android:background="@drawable/roundedbutton" >
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:background="@drawable/search_select_button" >
        </View>
    </RelativeLayout>

    <View
        android:id="@+id/fragment_progress_dim"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:alpha="0.15" />

    <ProgressBar
        android:id="@+id/fragment_progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

</RelativeLayout>