...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/main_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:hint="Enter word to search"
            android:inputType="text"
            android:imeOptions="actionSearch" />
...
            android:checked="true"
            android:text="Japanese"/>
    </LinearLayout>-->


    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_button" />

    <RelativeLayout
        android:layout_width="match_parent"
...
