<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="What languages would you like to study?"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="25dp" />
    
    <ListView
        android:id="@+id/languages_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="25dp">
    </ListView>
</LinearLayout>