...
                android:layout_height="40dp"
                android:layout_gravity="fill_horizontal"
                android:background="#108DB6"
                android:layout_margin="2dp" >

                <Spinner
                    android:id="@+id/language_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="0dp"
                    android:background="@null" />

                <ImageView
...
